crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__bin_op__multiple_ops.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/bin_op/multiple_ops.py
---
## AST

```
Module(
    ModModule {
        range: 0..19,
        body: [
            Expr(
                ExprStmt {
                    range: 0..3,
                    value: BinOp(
                        BinOpExpr {
                            range: 0..3,
                            left: Name(
                                NameExpr {
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: UnaryOp(
                                UnaryOpExpr {
                                    range: 2..3,
                                    op: UAdd,
                                    operand: Name(
                                        NameExpr {
                                            range: 3..3,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 4..9,
                    value: BinOp(
                        BinOpExpr {
                            range: 4..9,
                            left: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 4..5,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            op: Add,
                            right: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 8..9,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 10..13,
                    value: BinOp(
                        BinOpExpr {
                            range: 10..13,
                            left: Name(
                                NameExpr {
                                    range: 10..11,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Sub,
                            right: UnaryOp(
                                UnaryOpExpr {
                                    range: 12..13,
                                    op: USub,
                                    operand: Name(
                                        NameExpr {
                                            range: 13..13,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 14..19,
                    value: BinOp(
                        BinOpExpr {
                            range: 14..19,
                            left: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 14..15,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            op: Sub,
                            right: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 18..19,
                                    value: Int(
                                        2,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x++
  |    ^ Syntax Error: Expected an expression
2 | 1 + 2
3 | x--
4 | 1 - 2
  |


  |
1 | x++
2 | 1 + 2
3 | x--
  |    ^ Syntax Error: Expected an expression
4 | 1 - 2
  |
