crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__bin_op__starred_expression.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/bin_op/starred_expression.py
---
## AST

```
Module(
    ModModule {
        range: 0..14,
        body: [
            Expr(
                ExprStmt {
                    range: 0..6,
                    value: BinOp(
                        BinOpExpr {
                            range: 0..6,
                            left: Name(
                                NameExpr {
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Starred(
                                StarredExpr {
                                    range: 4..6,
                                    value: Name(
                                        NameExpr {
                                            range: 5..6,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 7..14,
                    value: BinOp(
                        BinOpExpr {
                            range: 7..14,
                            left: Name(
                                NameExpr {
                                    range: 7..8,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Pow,
                            right: Starred(
                                StarredExpr {
                                    range: 12..14,
                                    value: Name(
                                        NameExpr {
                                            range: 13..14,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x + *y
  |     ^^ Syntax Error: Starred expression cannot be used here
2 | x ** *y
  |


  |
1 | x + *y
2 | x ** *y
  |      ^^ Syntax Error: Starred expression cannot be used here
  |
